--- a/info.yaml
+++ b/info.yaml
@@ -3,7 +3,7 @@ city: Miami
 event_id: 544eec23f92f0c00079ead21
 price: 20.00
 date:
-    display: January 24
+    display: TBA
 location:
     name: UMiami
 sponsor_doc: /sponsorship.pdf
